# poker_solver

./: .gitignore  README.md  main.py  pyproject.toml  solver.py
cfr/: batched.py  vanilla.py
cli/: __init__.py  interactive.py  matrix.py  parser.py
config/: __init__.py  flops.yaml  loader.py
config/presets/: 100bb.yaml  aggressive.yaml  perflop.yaml  standard.yaml  tiny.yaml
core/: cards.py  device.py  equity.py  exploitability.py  hand_eval.py  hands.py  tensors.py
docs/plans/: 2026-01-31-cfr-implementation.md  2026-01-31-cfr-solver-design.md  2026-02-01-hunl-preflop-design.md  2026-02-01-hunl-preflop-implementation.md
games/: base.py  hunl_preflop.py  kuhn.py  postflop_subgame.py
tests/: test_batched_cfr.py  test_cfr_plus.py  test_config.py  test_cpu_gpu_equivalence.py  test_device.py  test_equity.py  test_exploitability.py  test_game_base.py  test_hand_eval.py  test_hands.py  test_hunl_cli.py  test_hunl_game.py  test_hunl_integration.py  test_hunl_solver.py  test_integration.py  test_interactive.py  test_kuhn.py  test_matrix.py  test_nash_convergence.py  test_parser.py  test_solver.py  test_tensors.py  test_vanilla_cfr.py
